--- a/style/style_arroz.css
+++ b/style/style_arroz.css
@@ -39,13 +39,13 @@ a {
   text-decoration: none;
 }
 .bgFooter{
-  background-color: #2e292a;
-  color:  rgb(36, 33, 33);
+  background-color: #9C4A31;
+  color:  white;
   text-decoration: none;
 }
 .bgFooter2{
-  background-color: black;
-  color:  rgb(36, 33, 33);
+  background-color: #9C4A31;
+  color:  white;
   text-decoration: none;
 }
 .p1 {
